CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
SET(LOGGER_SRC_LIST async_logger_impl.cpp)
set(LIBRARY_OUTPUT_PATH ${LOGGER_LIB_OUTPUT})
IF(WIN32)
ADD_DEFINITIONS(-DEXPORT_LOGGER_API)
IF(BUILD_SHARED_LIBS)
ADD_DEFINITIONS(-DSHARED_LIB)
ENDIF()
ENDIF()
IF(BUILD_SHARED_LIBS)
ADD_LIBRARY(async_logger SHARED ${LOGGER_SRC_LIST})
else()
ADD_LIBRARY(async_logger STATIC ${LOGGER_SRC_LIST})
ENDIF()
IF(UNIX)
TARGET_LINK_LIBRARIES(async_logger pthread)
ENDIF()