CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
PROJECT(test_logger)
SET(TEST_LOGGER_SRC test_logger.cpp)
set(EXECUTABLE_OUTPUT_PATH  ${LOGGER_BIN_OUTPUT})
ADD_EXECUTABLE(test_logger ${TEST_LOGGER_SRC})
LINK_DIRECTORIES(${LOGGER_BIN_OUTPUT})

INCLUDE_DIRECTORIES(${LOGGER_INCLUDE_PATH})
IF(UNIX)
TARGET_LINK_LIBRARIES(test_logger async_logger pthread)
else()
TARGET_LINK_LIBRARIES(test_logger async_logger)
ENDIF()
